[Q4] Tennis Player API: Supporting Endpoints (#8)
* [Q4] Add endpoint for creating new Players.

* [Q4] Add endpoint for creating Containers.
